<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:mContext="com.fny.program.opengldemo.MainActivity">

    <Button
        android:background="@drawable/button_shape"
        android:layout_margin="10dp"
        android:id="@+id/bt_circle"
        android:text="@string/circle"
        android:layout_width="100dp"
        android:layout_height="wrap_content" />

    <Button
        android:background="@drawable/button_shape"
        android:layout_margin="10dp"
        android:id="@+id/bt_cube"
        android:text="@string/cube"
        android:layout_width="100dp"
        android:layout_height="wrap_content" />

    <Button
        android:background="@drawable/button_shape"
        android:layout_margin="10dp"
        android:id="@+id/bt_dog"
        android:text="@string/dog"
        android:layout_width="100dp"
        android:layout_height="wrap_content" />

    <Button
        android:background="@drawable/button_shape"
        android:layout_margin="10dp"
        android:id="@+id/bt_cone"
        android:text="@string/cone"
        android:layout_width="100dp"
        android:layout_height="wrap_content" />

    <Button
        android:background="@drawable/button_shape"
        android:layout_margin="10dp"
        android:id="@+id/bt_sphere"
        android:text="@string/sphere"
        android:layout_width="100dp"
        android:layout_height="wrap_content" />

    <Button
        android:background="@drawable/button_shape"
        android:layout_margin="10dp"
        android:id="@+id/bt_earth"
        android:text="@string/earth"
        android:layout_width="100dp"
        android:layout_height="wrap_content" />

</LinearLayout>
